[gd_scene load_steps=3 format=3 uid="uid://c021ahdvymsec"]

[ext_resource type="Script" uid="uid://ce31tf8ldper8" path="res://scripts/score.gd" id="1_8juob"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8juob"]
size = Vector3(1.5, 0.5, 0.2)

[node name="Score" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_8juob")

[node name="ScoreIngame" type="Label3D" parent="."]
modulate = Color(0.881937, 0.881937, 0.881937, 1)
outline_modulate = Color(0, 0, 0, 0)
font_size = 36
outline_size = 24

[node name="MeshInstance3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999973, 0.00740013, 0, -0.00740013, 0.999973, 0, 0.164119, 0.278705)
visible = false

[node name="Title" type="Label3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64474, 0.112172)
text = "SCORE"
font_size = 48

[node name="ScoreFinal" type="Label3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0942822, 0.100698)
offset = Vector2(0, 150)
text = "10000000"
font_size = 128
outline_size = 28

[node name="ButtonToTheMenu" type="Label3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.512521, -0.00379285)
modulate = Color(0.85, 0.85, 0.85, 1)
text = "Back to Menu"
font_size = 26
outline_size = 8

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.523733, -0.00387582)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("BoxShape3D_8juob")
